--- a/Assignment2/styling.css
+++ b/Assignment2/styling.css
@@ -9,7 +9,9 @@
     font-weight: bolder;
   }
   body{
-    font-family: 'Manrope', sans-serif;
+    /* font-family: '', sans-serif; */
+    /* font-family: 'Times New Roman', Times, serif; */
+    font-family: Georgia, 'Times New Roman', Times, serif;
     /* background-color: hsla(89, 40%, 50%, 0.2); */
   }
   .searchbox{
